# droq-node-registry

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  registry.db  start-all-locally.sh  start-local.sh
assets/nodes/: dfx-base-node-template-py.json  dfx-hf-models-node.json  dfx-math-executor-node.json  dfx-social-executor-node.json  droq-math-executor-node.json  langflow-executor-node.json  lfx-runtime-executor-node.json  lfx-tool-executor-node.json
docs/: node-addition-guidelines.md
scripts/: extract_node_configs.py
src/registry/: __init__.py  api.py  database.py  main.py
