[project]
name = "droq-registry-service"
version = "0.1.0"
description = "Registry service for mapping executor nodes to their supported components"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
droq-registry-service = "registry.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/registry"]

